# sqlch

./: .gitignore  README.md  commentlist.txt  fix-sqlch-perms.sh  fix_cache_blocks.py  flake.nix  grade-repro.sh  pyproject.toml  result  rewrite_spotipy.sh
core/: config.py  data.py  enrich.py  mpv_ipc.py  player.py  util.py
docs/plans/: 2026-04-01-code-review-fixes.md  2026-07-01-sqlch-gui-visual-refresh-design.md  2026-07-01-sqlch-gui-visual-refresh-plan.md  2026-07-04-sqlch-gui-now-playing-lbp-design.md  2026-07-04-sqlch-gui-now-playing-lbp-plan.md
docs/superpowers/plans/: 2026-07-03-radio-recording.md  2026-07-05-rec-bubble.md  (+5 more)
nix/: home.nix
pkgs/sqlch/: default.nix  default.nix.bak
sqlch/: __init__.py  flake.nix
sqlch/cli/: enrich_cmd.py  main.py  main.py.bak
sqlch/core/: client.py  config.py  curation_db.py  daemon.py  data.py  discover.py  enrich.py  enrich.py.bak  enrich.py.bak2  library.py  mpris_daemon.py  mpris_daemon.py.bak  mpv_ipc.py  notify.py  paths.py  player.py  player.py.bak  recorder.py  spoti.py  spoti.py.bak.1770921690  util.py
sqlch/tui/: app.py
sqlch_gui/: __init__.py  __main__.py  daemon.py  icyprobe.py  library.py  metadata.py  palette.py  radiobrowser.py
sqlch_gui/ui/: __init__.py  banner.py  common.py  controls.py  discover.py  eq_strip.py  knob.py  now_playing.py  station_list.py  window.py
tests/: test_curation_db.py  test_icy_parse.py  test_icy_probe_move.py  test_recorder.py
tools/: cohesion.py  enrichment_test.py  lint_imports.py  lint_imports_add_sqlch.py  lint_imports_side_effects.py  repo_sanity.py
(+8 files in other folders)
