[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlch"
version = "0.1.0"
dependencies = [
    "requests",
    "textual",
]

[project.scripts]
sqlch = "sqlch.cli.main:main"

[tool.setuptools]
package-dir = { "" = "sqlch" }

[tool.setuptools.packages.find]
where = ["sqlch"]
