[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlch"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "requests==2.32.5",
  "textual==8.2.1"
]

[project.scripts]
sqlch = "sqlch.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sqlch*"]
